# pokedex_rs

./: .env  .gitignore  Cargo.toml  README.md  flake.nix
src/: display.rs  main.rs  pokemon.rs
